--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+input {
+  width: 500px;
+  padding: 10px 16px;
+  border: 1px solid #646cff;
+  border-radius: 5px;
+  margin-bottom: 16px;
+  background-color: white;
+  color: black;
+  font-size: 1.2rem;
+  outline: none;
+}
+
+@media (prefers-color-scheme: light) {
+  input {
+    background-color: black;
+    color: white;
+  }
 }
