--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@ input {
   outline: none;
 }
 
+.btn-delete {
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  background: transparent;
+}
+
 @media (prefers-color-scheme: light) {
   input {
     background-color: black;
